--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
 <body>
     @@include('html/header.html',{})
     <main>
+        @@include('html/saasInfo.html',{})
     </main>
-    @@include('html/footer.html',{})
     <script src="js/app.min.js"></script>
 </body>
 
