--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
     @@include('html/header.html',{})
     <main>
         @@include('html/saasInfo.html',{})
+        @@include('html/partners.html',{})
+        @@include('html/slogan.html',{})
     </main>
     <script src="js/app.min.js"></script>
 </body>
