--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
         @@include('html/saasInfo.html',{})
         @@include('html/partners.html',{})
         @@include('html/slogan.html',{})
+        @@include('html/stats.html',{})
     </main>
     <script src="js/app.min.js"></script>
 </body>
