--- a/src/html/saasInfo.html
+++ b/src/html/saasInfo.html
@@ -3,11 +3,12 @@
         <div class="saas-banner__info">
             <span class="sub-title">Lorem ipsum dolor</span>
             <h1>Always The <span class="underlined">Real</span> Thing, Always <span>Saas</span></h1>
-            <p>And that number is growing every day. That means <br> <a href="#" class="commerce">E-Commerce</a> is thriving.
+            <p>And that number is growing every day. That means <br> <a href="#" class="commerce">E-Commerce</a> is
+                thriving.
             </p>
             <div class="buttons">
                 <a href="#" class="btn">Try For Free</a>
-                <a href="#" class="btn">Try For Free</a>
+                <a href="#" class="btn blue">Try For Free</a>
             </div>
             <p class="quote">There are some things money can’t buy. For everything else there’s ‘’MasterCard” is a
                 good
