--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
         @@include('html/partners.html',{})
         @@include('html/slogan.html',{})
         @@include('html/stats.html',{})
+        @@include('html/advantages.html',{})
     </main>
     <script src="js/app.min.js"></script>
 </body>
