--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
         @@include('html/slogan.html',{})
         @@include('html/stats.html',{})
         @@include('html/advantages.html',{})
+        @@include('html/offers.html',{})
+        @@include('html/form.html',{})
     </main>
     <script src="js/app.min.js"></script>
 </body>
