--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,2 +1,42 @@
 <footer>
+    <div class="container">
+        <div class="company-info column">
+            <div class="company-info__logo">
+                <img src="@img/icons/company-logo.svg" alt="">
+                <span>Base</span>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
+        </div>
+        <div class="column">
+            <span class="column__name">Customers</span>
+            <span>Buyer</span>
+            <span>Supplier</span>
+        </div>
+        <div class="column">
+            <span class="column__name">Company</span>
+            <span>About us</span>
+            <span>Careers</span>
+            <span>Contact us</span>
+        </div>
+        <div class="column">
+            <span class="column__name">Further Infomation</span>
+            <span>Terms &Conditions</span>
+            <span>Privacy Policy</span>
+        </div>
+        <div class="social column">
+            <span class="column__name">Follow us</span>
+            <input type="email" placeholder="Email Address" maxlength="30" class="email">
+            <div class="social-media">
+                <a href="#">
+                    <img src="@img/icons/facebook-icon.svg" alt="Facebook">
+                </a>
+                <a href="#">
+                    <img src="@img/icons/twitter-icon.svg" alt="Twitter">
+                </a>
+                <a href="#">
+                    <img src="@img/icons/instagram-icon.svg" alt="Instagram">
+                </a>
+            </div>
+        </div>
+    </div>
 </footer>
