--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
         @@include('html/offers.html',{})
         @@include('html/form.html',{})
     </main>
+    @@include('html/footer.html',{})
     <script src="js/app.min.js"></script>
 </body>
 
