--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -9,19 +9,19 @@
         </div>
         <div class="column">
             <span class="column__name">Customers</span>
-            <span>Buyer</span>
-            <span>Supplier</span>
+            <a href="#">Buyer</a>
+            <a href="#">Supplier</a>
         </div>
         <div class="column">
             <span class="column__name">Company</span>
-            <span>About us</span>
-            <span>Careers</span>
-            <span>Contact us</span>
+            <a href="#">About us</a>
+            <a href="#">Careers</a>
+            <a href="#">Contact us</a>
         </div>
         <div class="column">
             <span class="column__name">Further Infomation</span>
-            <span>Terms &Conditions</span>
-            <span>Privacy Policy</span>
+            <a href="#">Terms &Conditions</a>
+            <a href="#">Privacy Policy</a>
         </div>
         <div class="social column">
             <span class="column__name">Follow us</span>
