--- a/src/html/saasInfo.html
+++ b/src/html/saasInfo.html
@@ -8,12 +8,12 @@
             </p>
             <div class="buttons">
                 <a href="#" class="btn">Try For Free</a>
-                <a href="#" class="btn blue">Try For Free</a>
+                <a href="#" class="blue btn">Try For Free</a>
             </div>
             <p class="quote">There are some things money can’t buy. For everything else there’s ‘’MasterCard” is a
                 good
                 example.</p>
         </div>
-        <img src="@img/onlymac.png" class="saas-banner__photo" alt="mac">
+        <img src="@img/stats.png" class="saas-banner__photo" alt="mac">
     </div>
 </section>
